RESOLVED - issue GENEDB-398: OrthoMCL link - add a null check
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/genedb-ng/trunk@11350 ee4ac58c-ac51-4696-9907-e4b3aa274f04